--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-smc-python==0.6.2
 boto3==1.12.37
-smc-python-monitoring==1.2.0
+botocore==1.15.49
+cefevent==0.5.1
+certifi==2020.12.5
+chardet==4.0.0
 colorama==0.4.3
+docutils==0.15.2
 format-cef==0.0.4
+idna==2.10
+jmespath==0.10.0
+python-dateutil==2.8.1
+requests==2.25.1
+s3transfer==0.3.6
+six==1.15.0
+smc-python==0.6.2
+smc-python-monitoring==1.2.0
+urllib3==1.25.11
+websocket-client==0.58.0
